--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-python-multipart==0.0.9
-aiofiles==23.2.1 
+# Web Framework
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+python-multipart==0.0.19
+aiofiles==23.2.1
+
+# Stock Data APIs
+yfinance==0.2.66
+pandas==2.3.2
+requests==2.31.0
+httpx==0.25.0
+
+# Environment Variables
+python-dotenv==1.0.0
